# rceu-2026

./: .gitignore  003_ian_todo.txt  README.md  books  main.py  pyproject.toml
cpcrr/cpcrr/: __init__.py
cpcrr/cpcrr/experiment/: oneway.py  twokr.py
cpcrr/cpcrr/experiment/experiment_impl/: experiment.py  stats_tables.py
cpcrr/cpcrr/functions/: __init__.py  functions.py  functions_quickplot.py
cpcrr/cpcrr/methods/: __init__.py  cokrigingfitter.py  krigingfitter.py  polynomial1dfitter.py  radialbasisfitter.py
ian/shared/: rlhc.py
ian/surrogate-modeling/chapter-2/: chapter_2.ipynb
matlab-book-code/Constructing a Surrogate/: rbfsimple.m
src/: chapter_2_lucius.ipynb
src/ian/: 002branin_kriging_test.py  02polynomial1d_cross-validate-5fold.ipynb
src/ian/surrogate-modeling/chapter-1/: chapter_1.ipynb
src/mahmoudah/: 001test_twokr_1d.py  001test_twokr_2d.py  001test_twokr_gpr_1d.py  002test_twokr_gpr_2d.py  002test_twokr_gpr_4d.py  002test_twokr_gpr_4d_thomson.py  surrogate model example code  thompson001.py
src/shared/: kinetic_energy.py  likelihood.py  local_interstellar_spectrum.py  plotter.py  psi.py  pyproject.toml  rbf.py  rlhc.py  sample_funcs.py  sampling.py
src/shared/cpcrr/: README.md  __init__.py
src/shared/cpcrr/experiment/: __init__.py  twokr.py
src/shared/cpcrr/experiment/experiment_impl/: __init__.py
src/shared/cpcrr/functions/: __init__.py  functions.py  functions_data.py  functions_quickplot.py
src/shared/cpcrr/methods/: __init__.py  cokrigingfitter.py  krigingfitter.py  polynomial1dfitter.py  radialbasisfitter.py
src/shared/cpcrr/sampling/: assisted_axes.py  full_factorial.py  thomson.py  thomson_generator.py
src/shared/matlab-book-code/: ._README.txt
src/shared/surrogates/: cokriging.py  emukitMFGP.py  kriging.py  mf_surrogate.py  rbf.py  surrogate.py
src/surrogate-modeling/: chapter_1.ipynb
src/surrogate-modeling/appendix-examples/: example1.py  example2.py
src/surrogate-modeling/chapter-1/: chapter_1.ipynb
(+18 files in other folders)
