[project]
name = "rceu-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "emukit>=0.5.1",
    "gpy>=1.13.2",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scipy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]